[ CHANGELOG
	Project Name
		The Forgotten Server

	Version
		0.2.8

	Codenamed
		"Mystic Spirit"

	License
		GNU GPLv3

	Forum
		http://otland.net/
]

[ File changes
	D = Deleted.
	M = Modified.
	A = Added.

	M The Forgotten Server.exe
	M config.lua
	M data/global.lua
	M data/items/items.otb
	M data/items/items.xml
	A data/items/items.xsd
	M data/XML/commands.xml
	M data/XML/outfits.xml
]

[ Milestone
	Protocol 8.62 support.
	Fixed a bug with the reading of banishment comment.
	Rewritten the way the amount of frags are calculated as an attempt to make it more accurate, and removed the formatTime function from tools.
	The "Loot of" message will no longer list containers that aren't empty.
	Removed the trailing dot from the "Loot of" message.
	Changes to the movement code to make map-clicking smoother.
	Players can no longer heal paralyze during movement, it will instead be healed once the player finishes his/her current move.
	Fixed a bug with player saving.
	Added a new way to save house items: binary-tilebased, a safer way. In case of stream failure, it will just wipe the tiles it fails at instead of entire houses.
	Fixed a lot of Lua binding errors, and added support for LuaJIT (compile with -D__LUAJIT__ to use LuaJIT).
	Experience will no longer be shared in a party when the victim is a player.
	Players will no longer receive an unjustified kills for killing guild mates.
	Corrected a disconnect message in gameworld connection.
	Added missing disconnect message when auth fails in gameworld connection.
	Fixed possible shop system exploit.
	Status protocol compatibility.
	Code cleanup, formating & optimizations.
	New configurable variable (removeChargesFromWeapons, default: "yes").
	Removed Rule Violation Reports channel (Ctrl + R) as it no longer exists in protocol 8.62.
	Removed protocol code for Rule Violation Window (Ctrl + Y) as it no longer exists in protocol 8.62.